[type]: fix [module]: CSS [id]: #429 [desc]: Fixes #429, IE8 specific hack rewritten in tabs.css to be more general for fixing a layout issue on tabs that appear incorrectly in IE8 Quirks mode.
git-svn-id: http://code.extjs.com/svn/ext/trunk@5942 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/tabs.css
+++ b/resources/css/structure/tabs.css
@@ -168,7 +168,7 @@ ul.x-tab-strip li.x-tab-edge {
 /*
  * Horrible hack for IE8 in quirks mode
  */
-.ext-border-box .ext-ie8 .x-tab-strip .x-tab-right{
+.ext-ie8 .x-tab-strip .x-tab-right{
     top: 1px;
 }
 
